--- a/_talks/2024_06_26-ohbm.md
+++ b/_talks/2024_06_26-ohbm.md
@@ -8,4 +8,4 @@ date: 2024-06-26
 location: "Conference"
 ---
 
-I was invited to deliver an oral presentation as part of a symposium on Explainable Artificial Intelligence in Neuroimaging Symposium at the Organisation for Human Brain Mapping Conference 2024 in Seoul, Korea. My talk recording is available [here]([url](https://www.youtube.com/watch?v=VlMSFkbJCVE&list=PLEJ899jsgdRrW5xWZcdTNiNUj25TCKcvx&index=10)).
+I was invited to deliver an oral presentation as part of a symposium on Explainable Artificial Intelligence in Neuroimaging Symposium at the Organisation for Human Brain Mapping Conference 2024 in Seoul, Korea. My talk recording is available [here](https://www.youtube.com/watch?v=VlMSFkbJCVE&list=PLEJ899jsgdRrW5xWZcdTNiNUj25TCKcvx&index=10){:target="_blank"}.
